# roast-discord-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
src/: dto.rs  main.rs  roastbotai.rs
