[package]
name = "roast-discord-bot"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Defining bin here to make multi stage docker build work
[[bin]]
name = "roast-discord-bot"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
reqwest = "0.11.16"
dotenv = "0.15.0"
serde = "1.0.164"
serde_json = "1.0.97"
rand = "0.8.5"
